--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 php:
   - 7.0
+  - nightly
 
 env:
   - CC=clang   CFLAGS=""
@@ -11,7 +12,8 @@ env:
 
 install:
   - sudo apt-get update -qq
-  - if [ "$VALGRIND" -eq 1 ]; then sudo apt-get install -qq valgrind; export TEST_PHP_ARGS="-m"; fi
+  - export TEST_PHP_ARGS="--show-diff --show-out"
+  - if [ "$VALGRIND" -eq 1 ]; then sudo apt-get install -qq valgrind; export TEST_PHP_ARGS="$TEST_PHP_ARGS -m"; fi
   - sudo apt-get install -qq $CC
   - if [ "$VALGRIND" -eq 1 ]; then valgrind --version; fi
   - $CC --version
@@ -19,12 +21,9 @@ install:
 script:
   - phpize
   - ./configure --enable-igbinary
-  # Fix not failing makes in php 5.2 and 5.3
-  - perl -i -pe 's/\-\@if/\@if/' Makefile
   - make
   - REPORT_EXIT_STATUS=1 NO_INTERACTION=1 make test
 
 branches:
   only:
     - master
-    - php7-dev
